--- a/src/app/tree/components/tree-node/tree-node.component.html
+++ b/src/app/tree/components/tree-node/tree-node.component.html
@@ -1,6 +1,7 @@
 <li class="tree-node">
-  <span class="node-label">{{ node.name }}</span>
-  <ul *ngIf="node.children && node.children.length > 0" class="nested">
+  <span class="tree-node--root" [ngStyle]="{'::before': {'content': arrowDown}}"
+    [ngClass]="{'tree-node--leaf': !node.children}">{{ node.name }}</span>
+  <ul *ngIf=" node.children && node.children.length> 0" class="tree-node--nested">
     <li *ngFor="let child of node.children">
       <atl-tree-node [node]="child"></atl-tree-node>
     </li>
