--- a/src/app/tree/tree.component.scss
+++ b/src/app/tree/tree.component.scss
@@ -4,5 +4,7 @@
   place-items: center;
   &__list {
     list-style: none;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min(30rem, 100%), 1fr));
   }
 }
