--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 header {
   height: 4rem;
-  background-color: darkgray;
+  border-bottom: 1px solid black;
 }
 
 main {
@@ -12,7 +12,7 @@ main {
 footer {
   position: fixed;
   bottom: 0;
-  background-color: darkgray;
+  border-top: 1px solid black;
   height: 4rem;
   width: 100vw;
 }
