--- a/src/app/tree/components/tree-node/tree-node.component.html
+++ b/src/app/tree/components/tree-node/tree-node.component.html
@@ -1,9 +1,11 @@
-<li class="tree-node">
-  <span class="tree-node--root" [ngStyle]="{'::before': {'content': arrowDown}}"
-    [ngClass]="{'tree-node--leaf': !node.children}">{{ node.name }}</span>
-  <ul *ngIf=" node.children && node.children.length> 0" class="tree-node--nested">
-    <li *ngFor="let child of node.children">
-      <atl-tree-node [node]="child"></atl-tree-node>
+<li role="tree-item" class="tree-node">
+  <div [attr.aria-label]="buttonAriaLabel" (keyup.enter)="expanded =!expanded" (keyup.space)="expanded = !expanded"
+    role="button" [tabindex]="node.children? 0: -1" (click)="expanded = !expanded" [class.expanded-icon]="expanded"
+    [class.collapsed-icon]="!expanded" [ngClass]="!node.children? 'tree-node__leaf': 'tree-node__root'">{{ node.name }}
+  </div>
+  <ul role="group" *ngIf="expanded && node.children && node.children.length> 0" class="tree-node__nested">
+    <li [attr.aria-expanded]="!!expanded" *ngFor="let child of node.children">
+      <atl-tree-node [expanded]="expanded" [node]="child"></atl-tree-node>
     </li>
   </ul>
 </li>
